Fixed Overflow Issue

--- a/scss/components/dialog.scss
+++ b/scss/components/dialog.scss
@@ -16,6 +16,7 @@
   > .zust-content {
     background-color: var(--dialog-bg-color);
     padding: 20px;
+    overflow: hidden;
     color: var(--text-color-secondary);
     border-radius: 14px;
     transform: scale(0.8) rotateX(0deg);
